Removed instagram text and fixed spacing around logos

--- a/src/components/_homepage/instagram-feed.module.scss
+++ b/src/components/_homepage/instagram-feed.module.scss
@@ -1,50 +1,50 @@
 @import '../../base/module';
 
 .flex {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .media {
-	align-items: center;
-	padding: 80px 0 0;
-	text-align: center;
+  align-items: center;
+  padding: 10px 0 0;
+  text-align: center;
 
-	.logo-soup {
-		display: flex;
-		flex-wrap: wrap;
-		gap: 15px;
-		justify-content: center;
-		margin: 20px 0;
-	}
+  .logo-soup {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    justify-content: center;
+    margin: 20px 0;
+  }
 
-	span {
-		font-weight: 600;
-		font-size: 20px;
-		line-height: 28px;
-	}
-	a {
-		font-weight: 600;
-		font-size: 18px;
-		line-height: 28px;
-		text-decoration: underline;
-		color: $color-rustorange;
-	}
+  span {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 28px;
+  }
+  a {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 28px;
+    text-decoration: underline;
+    color: $color-rustorange;
+  }
 
-	@media (min-width: $tablet) {
-		display: flex;
-		gap: 40px;
+  @media (min-width: $tablet) {
+    display: flex;
+    gap: 40px;
 
-		.logo-soup {
-			margin: 0;
-		}
-	}
+    .logo-soup {
+      margin: 0;
+    }
+  }
 }
 
 .mediaWrap {
-	max-width: 150px;
-	img {
-		max-width: 100%;
-	}
+  max-width: 150px;
+  img {
+    max-width: 100%;
+  }
 }
